# RAG-Powered-Code-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  test_agent.py
.github/workflow/: build_and_test.yml
.github/workflows/: deploy.yml
docs/: __future__.html  __main__.html  _thread.html  abc.html  aifc.html  allos.html  annotationlib.html  archiving.html  argparse.html  array.html  ast.html  asynchat.html  asyncio-api-index.html  asyncio-dev.html  asyncio-eventloop.html  asyncio-exceptions.html  asyncio-extending.html  asyncio-future.html  asyncio-graph.html  asyncio-llapi-index.html  asyncio-platforms.html  asyncio-policy.html  asyncio-protocol.html  asyncio-queue.html  asyncio-runner.html  asyncio-stream.html  asyncio-subprocess.html  asyncio-sync.html  asyncio-task.html  asyncio.html  asyncore.html  atexit.html  audioop.html  audit_events.html  base64.html  bdb.html  binary.html  binascii.html  bisect.html  builtins.html  (+291 more)
learning/: Modelfile  chromadb_test.ipynb  day2.py  ollama_test.ipynb
src/fast_tokenizer/: CMakeLists.txt  pyproject.toml
src/fast_tokenizer/src/: tokenizer.cpp
src/rag_code_assistant/: agent.ipynb  agent.py  ingest.ipynb  ingest.py  pipeline.ipynb  pipeline.py
